# my_bot

./: input  main.py  proxy.txt  pyproject.toml
core/: input  main.py  settings.py
core/database/: __init__.py  cocksize_db.py  count_value.py  delete_from_database.py  re_registration.py  registration.py  roulette_general_info.py  scheduler_roulette_test.py  take_all_users.py  take_day_value.py  user_info.py  value_test.py  write_in_database.py
core/handlers/: always.py  basic.py  cocksize.py  roulette.py  scheduler_roulette.py
core/utilis/: cocksize_meme_base.py  commands.py  rereg_keyboard.py  sheduler.py
core/utils/: commands.py
